--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@smooth-ui/core-sc": "^8.0.1",
+    "bcrypt": "^3.0.3",
+    "body-parser": "^1.18.3",
+    "faker": "^4.1.0",
+    "i": "^0.3.6",
+    "moment": "^2.23.0",
+    "morgan": "^1.9.1",
+    "npm": "^6.6.0",
+    "pg": "^7.8.0",
+    "pg-hstore": "^2.3.2",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-scripts": "2.1.3",
+    "sequelize": "^4.42.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
