--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@smooth-ui/core-sc": "^8.0.1",
@@ -18,7 +19,10 @@
     "pg-hstore": "^2.3.2",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.0",
     "react-scripts": "2.1.3",
+    "react-slick": "^0.23.2",
     "sequelize": "^4.42.0",
     "styled-components": "^4.1.3"
   },
