--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@smooth-ui/core-sc": "^8.0.1",
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "faker": "^4.1.0",
@@ -22,7 +23,6 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.0",
     "react-scripts": "2.1.3",
-    "react-slick": "^0.23.2",
     "sequelize": "^4.42.0",
     "styled-components": "^4.1.3"
   },
